# PruebaLT

./: .gitignore  ACTUALIZAR_OPENAI.md  CAMBIOS_IMPLEMENTADOS.md  CONFIGURACION_EMAIL.md  EXPLICACION_PROYECTO.txt  GUIA_PRUEBAS.md  INSTALACION_DOMINIO.md  INSTRUCCIONES.md  INSTRUCCIONES_GIT.md  README.md  RESUMEN_EXPOSICION.md  docker-compose.yml
backend/: .env.backup  Dockerfile  requirements.txt  setup_domain.py  test_dominio.py  test_dominio_bd.py  verificar_dominio.py
backend/api/: admin.py  backends.py  currency_service.py  domain_adapters.py  models.py  permissions.py  serializers.py  services.py  urls.py  utils.py  views.py
backend/api/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
domain/: EJEMPLO_USO.md  README.md  pyproject.toml  setup.py
domain/src/domain_layer/: __init__.py
domain/src/domain_layer/entities/: __init__.py  empresa.py  inventario.py  producto.py
frontend/: ATOMIC_DESIGN.md  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/atoms/Alert/: Alert.css  Alert.js
frontend/src/components/atoms/Button/: Button.css  Button.js
frontend/src/components/atoms/Input/: Input.css  Input.js
frontend/src/context/: AuthContext.js
frontend/src/pages/Empresas/: Empresas.css  Empresas.js  index.js
frontend/src/pages/Inventario/: Inventario.css  Inventario.js  index.js
frontend/src/pages/Login/: Login.css  Login.js
frontend/src/pages/Productos/: Productos.css  Productos.js  index.js
frontend/src/services/: api.js
(+17 files in other folders)
